--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root {
+ :root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -8069,6 +8069,7 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light {
   background: transparent !important;
+  color:#000;
   position: absolute;
   top: 35px;
   left: 0;
@@ -8082,9 +8083,9 @@ h1, h2, h3, h4, h5,
       top: 0;
       padding: 10px 15px; } }
   .ftco-navbar-light .navbar-brand {
-    color: rgba(255, 255, 255, 0.8); }
+    color: rgba(0, 0, 0, 0.8); }
     .ftco-navbar-light .navbar-brand span {
-      color: rgba(255, 255, 255, 0.5); }
+      color: rgba(0, 0, 0, 0.5); }
     .ftco-navbar-light .navbar-brand:hover {
       color: #fff; }
     @media (max-width: 991.98px) {
@@ -8176,7 +8177,7 @@ h1, h2, h3, h4, h5,
     padding-bottom: 1.5rem;
     padding-left: 20px;
     padding-right: 20px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(0, 0, 0, 0.9);
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -8188,7 +8189,7 @@ h1, h2, h3, h4, h5,
         padding-left: 0;
         padding-right: 0;
         padding-bottom: 0;
-        color: #fff; } }
+        color: #000; } }
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
     border: none;
     background: #fff;
@@ -8343,14 +8344,15 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center;
   position: relative;
   z-index: 0;
-  height: 750px; }
+  height: 100vh; }
   @media (max-width: 1199.98px) {
     .hero-wrap {
+      height: 50vh;
       background-position: center center !important; } }
   .hero-wrap .overlay {
     position: absolute;
@@ -8359,33 +8361,31 @@ h1, h2, h3, h4, h5,
     right: 0;
     bottom: 0;
     content: '';
-    opacity: .4;
+    opacity: 1;
     background: #000000; }
   .hero-wrap .slider-text {
-    height: 750px;
+    /* height: 200vh; */
     position: relative; }
     .hero-wrap .slider-text .text {
       padding: 30px 0;
       -webkit-transform: rotate(-4deg);
       -ms-transform: rotate(-4deg);
       transform: rotate(-4deg); }
-    .hero-wrap .slider-text h1 {
+    .hero-wrap .slider-text h2 {
       font-size: 80px;
-      color: #fff;
+      color: #000;
       line-height: 1.1;
       font-weight: 700;
       font-style: italic;
-      color: transparent;
-      -webkit-text-fill-color: transparent;
-      /* Will override color (regardless of order) */
-      -webkit-text-stroke-width: .5px;
-      -webkit-text-stroke-color: #fff; }
+      /* color: transparent; */
+      /* -webkit-text-fill-color: transparent; */
+      /* Will override color (regardless of order) */ }
       .hero-wrap .slider-text h1 span {
         color: #b7472a;
         -webkit-text-fill-color: #fff;
         -webkit-text-stroke-width: 0px; }
       @media (max-width: 991.98px) {
-        .hero-wrap .slider-text h1 {
+        .hero-wrap .slider-text h2 {
           font-size: 40px; } }
     .hero-wrap .slider-text p {
       font-weight: 400;
@@ -8397,7 +8397,7 @@ h1, h2, h3, h4, h5,
     position: relative; }
     .hero-wrap.hero-wrap-2 .overlay {
       width: 100%;
-      height: 400px;
+      height: 100px;
       position: absolute;
       top: 0;
       left: 0;
