--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,12 +134,12 @@ h1, h2, h3, h4, h5,
 	}
 
 	.navbar-brand {
-		color: rgba(255,255,255,.8);
+		color: rgba(12, 12, 12, 0.8);
 		span{
-			color: rgba(255,255,255,.5);
+			color: rgba(8, 8, 8, 0.5);
 		}
 		&:hover{
-			color: $white;
+			color: $black;
 		}
 		@include media-breakpoint-down(md){
 			color: $white;
@@ -544,7 +544,7 @@ h1, h2, h3, h4, h5,
 		position: relative;
 		.overlay{
 			width: 100%;
-			height: 400px;
+			height: 100px;
 
 			position: absolute;
 			top: 0;
